Change URL to URI and make method names more terse.