@@ -5,8 +5,8 @@ import static org.junit.Assert.fail;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 import javax.ws.rs.client.InvocationException;
 import javax.ws.rs.core.MediaType;
@@ -31,10 +31,10 @@ public class JaxRSLevel0ClientTest {
     @Ignore
     public void testDeleteRequest() {
         try {
-            client.deleteRequest(TestingConstants.ROGERS_TOKEN, new URL(TestingConstants.BASE_URL + "/students/"
+            client.delete(TestingConstants.ROGERS_TOKEN, new URI(TestingConstants.BASE_URL + "/students/"
                     + TestingConstants.TEST_STUDENT_DELETE_ID), MediaType.APPLICATION_JSON);
 
-            final String getResponse = client.getRequest(TestingConstants.ROGERS_TOKEN, new URL(
+            final String getResponse = client.get(TestingConstants.ROGERS_TOKEN, new URI(
                     TestingConstants.BASE_URL + "/students/" + TestingConstants.TEST_STUDENT_DELETE_ID),
                     MediaType.APPLICATION_JSON);
             assertNotNull(getResponse);
@@ -52,22 +52,20 @@ public class JaxRSLevel0ClientTest {
     @Test
     public void testGetRequest() {
         try {
-            String actualResponse = client.getRequest(TestingConstants.ROGERS_TOKEN, new URL(TestingConstants.BASE_URL
+            String actualResponse = client.get(TestingConstants.ROGERS_TOKEN, new URI(TestingConstants.BASE_URL
                     + "/students"), MediaType.APPLICATION_JSON);
             assertNotNull(actualResponse);
 
-            actualResponse = client.getRequest(TestingConstants.ROGERS_TOKEN, new URL(TestingConstants.BASE_URL
+            actualResponse = client.get(TestingConstants.ROGERS_TOKEN, new URI(TestingConstants.BASE_URL
                     + "/students/" + TestingConstants.TEST_STUDENT_ID), MediaType.APPLICATION_JSON);
             assertNotNull(actualResponse);
-        } catch (URISyntaxException e) {
+        } catch (final URISyntaxException e) {
             fail(e.getMessage());
-        } catch (MalformedURLException e) {
-            fail(e.getMessage());
-        } catch (InvocationException e) {
+        } catch (final InvocationException e) {
             fail(e.getMessage());
         } catch (final IOException e) {
             fail(e.getMessage());
-        } catch (StatusCodeException e) {
+        } catch (final StatusCodeException e) {
             fail(e.getMessage());
         }
     }
@@ -76,22 +74,20 @@ public class JaxRSLevel0ClientTest {
     @Test
     public void testGetRequestWithBrokenToken() {
         try {
-            String actualResponse = client.getRequest(TestingConstants.BROKEN_TOKEN, new URL(TestingConstants.BASE_URL
+            String actualResponse = client.get(TestingConstants.BROKEN_TOKEN, new URI(TestingConstants.BASE_URL
                     + "/students"), MediaType.APPLICATION_JSON);
             assertNotNull(actualResponse);
 
-            actualResponse = client.getRequest(TestingConstants.BROKEN_TOKEN, new URL(TestingConstants.BASE_URL
+            actualResponse = client.get(TestingConstants.BROKEN_TOKEN, new URI(TestingConstants.BASE_URL
                     + "/students/" + TestingConstants.TEST_STUDENT_ID), MediaType.APPLICATION_JSON);
             assertNotNull(actualResponse);
-        } catch (URISyntaxException e) {
+        } catch (final URISyntaxException e) {
             fail(e.getMessage());
-        } catch (MalformedURLException e) {
-            fail(e.getMessage());
-        } catch (InvocationException e) {
+        } catch (final InvocationException e) {
             fail(e.getMessage());
         } catch (final IOException e) {
             fail(e.getMessage());
-        } catch (StatusCodeException e) {
+        } catch (final StatusCodeException e) {
             fail(e.getMessage());
         }
     }
